# adhd_framework_v3

./: .config  LICENSE  README.md  adhd_framework.py  admin_cli.py  demo_collision_detection.py  init.yaml  pyproject.toml
modules/dev/adhd_mcp/: README.md  adhd_cli.py  adhd_controller.py  adhd_mcp.py  context_controller.py  pyproject.toml  refresh.py  refresh_full.py
modules/dev/adhd_mcp/tests/: test_mcp_tools.py
modules/dev/dream_mcp/: README.md  __init__.py  dream_controller.py  dream_mcp.py  frontmatter_parser.py  output_formatter.py  pyproject.toml  refresh_full.py  tree_scanner.py
modules/dev/flow_core/: .config_template  README.md  __init__.py  compiler.py  dependency_graph.py  errors.py  flow_cli.py  flow_controller.py  flow_lsp.py  manual.md  models.py  parser.py  pyproject.toml  refresh.py  refresh_full.py  requirements.txt  resolver.py  tokenizer.py
modules/dev/flow_core/data/: adhd-framework.flow-language-0.1.0.vsix
modules/dev/flow_core/playground/: README.md  __init__.py  compiler_playground.ipynb  dependency_graph_playground.ipynb  parser_playground.ipynb  test_tiered_visibility_spec.py  tokenizer_playground.ipynb
modules/dev/flow_core/playground/agents/: FINDINGS_style_title_template.md  FLOW_QUICK_REFERENCE.md  FLOW_TUTORIAL.md  README.md
modules/dev/flow_core/playground/agents/compiled/: hyper_san_checker_BEFORE.md  hyper_san_checker_v2.md  hyper_san_checker_v3.md  hyper_san_checker_v4.md
modules/dev/flow_core/playground/agents/diffs/: hyper_san_checker.diff.md
modules/dev/flow_core/playground/agents/outputs/: hyper_san_checker.adhd.agent.md
modules/dev/flow_core/playground/agents/sources/: hyper_san_checker.flow  hyper_san_checker_v2.flow  hyper_san_checker_v3.flow  hyper_san_checker_v4.flow  hyper_san_checker_v4_no_comment.flow
modules/dev/flow_core/playground/samples/: complex.flow  hello.flow  imports.flow  nested.flow  refs.flow
modules/dev/flow_core/styles/: __init__.py  divider_handler.py  list_handler.py  registry.py  title_handler.py  wrapper_handler.py
modules/dev/flow_core/tests/: test_cli.py  test_compiler.py  test_dependency_graph.py  test_lsp.py  test_parser.py  test_resolver.py  test_styles.py
modules/dev/instruction_core/: .config_template  README.md  instruction_controller.py  pyproject.toml
modules/dev/instruction_core/data/agents/: hyper_agent_smith.adhd.agent.md  hyper_expedition.adhd.agent.md  hyper_iq_guard.adhd.agent.md  hyper_orchestrator.adhd.agent.md  hyper_red.adhd.agent.md  hyper_san_checker.adhd.agent.md
modules/dev/instruction_core/data/compiled/: SKILLS_INDEX.md  compiled_manifest.json  instruction_sync_overview.md
modules/dev/instruction_core/data/compiled/agents/: hyper_agent_smith.adhd.agent.md  hyper_architect.adhd.agent.md  hyper_day_dreamer.adhd.agent.md  hyper_expedition.adhd.agent.md  hyper_iq_guard.adhd.agent.md  hyper_orchestrator.adhd.agent.md  hyper_red.adhd.agent.md  hyper_san_checker.adhd.agent.md
modules/dev/instruction_core/data/compiled/instructions/: agent_common_rules.instructions.md
modules/dev/instruction_core/data/flows/: instruction_sync_overview.flow
modules/dev/instruction_core/data/flows/agents/: hyper_agent_smith.flow  hyper_agent_smith.yaml  hyper_architect.flow  hyper_architect.yaml  hyper_day_dreamer.flow  hyper_day_dreamer.yaml  hyper_expedition.flow  hyper_expedition.yaml  hyper_iq_guard.flow  hyper_iq_guard.yaml  hyper_orchestrator.flow  hyper_orchestrator.yaml  hyper_red.flow  hyper_red.yaml  hyper_san_checker.flow  hyper_san_checker.yaml
modules/dev/instruction_core/data/flows/instructions/: agent_common_rules.flow  agent_common_rules.yaml
modules/dev/instruction_core/data/instructions/agents/: agents_format.instructions.md  hyper_san_output.instructions.md
modules/dev/instruction_core/data/instructions/exped/: expedition_schemas.instructions.md  (+1 more)
modules/dev/instruction_core/data/prompts/: pull_modules.prompt.md  push_modules.prompt.md  update_requirements.prompt.md
modules/dev/module_creator_core/: README.md  __init__.py  mcps_mod.py  pyproject.toml
modules/dev/module_creator_core/data/templates/: instructions.md.template  main_module.py.template
modules/dev/module_lifecycle_core/: README.md  __init__.py  _git_utils.py  module_adder.py  module_remover.py  module_updater.py  pyproject.toml  pyproject_patcher.py
modules/dev/module_lifecycle_core/tests/: test_git_utils.py  test_module_adder.py  test_module_lifecycle.py  test_pyproject_patcher.py  test_pyproject_remove.py  test_pyproject_scaffolder.py
modules/dev/project_creator_core/: README.md  preload_sets.py  project_creation_wizard.py  project_creator.py  pyproject.toml  templates.py  yaml_utils.py
modules/dev/project_creator_core/data/: module_preload_sets.yaml
modules/dev/project_creator_core/data/templates/: app.py.template  readme.md.template
modules/dev/project_creator_core/tests/: test_project_wizard_collision.py
modules/foundation/cli_manager/: README.md  __init__.py  cli_manager.py  pyproject.toml  refresh_full.py
modules/foundation/cli_manager/data/: admin_cli.txt
modules/foundation/config_manager/: README.md  __init__.py  config_keys.py  config_manager.instructions.md  config_manager.py  config_template.py  pyproject.toml  refresh.py
modules/foundation/creator_common_core/: .config_template  creator_common_core.py  pyproject.toml
modules/foundation/exceptions_core/: README.md  pyproject.toml
modules/foundation/logger_util/: README.md  __init__.py  compact_style.py  logger.py  logger_style.py  logger_util.instructions.md  pyproject.toml
modules/foundation/modules_controller_core/: README.md  __init__.py  dependency_walker.py  module_doctor.py  module_filter.py  module_issues.py  module_types.py  modules_controller.py  pyproject.toml  refresh_order.py
modules/foundation/modules_controller_core/deferred/: dependency_walker.py
modules/foundation/modules_controller_core/tests/: __init__.py  test_dependency_walker.py  test_module_filter.py  test_refresh_order.py
modules/foundation/temp_files_manager/: README.md  __init__.py  pyproject.toml  temp_files_manager.py
(+524 files in other folders)
