[project]
name = "dream-mcp"
version = "0.0.1"
description = "ADHD Framework MCP: dream_mcp — Day-dream planning artifact management"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
    "pyyaml>=6.0",
    "mcp>=1.1.0",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/adhd_framework_v3/tree/main/modules/dev/dream_mcp"

[tool.adhd]
layer = "dev"
mcp = true

[tool.uv.sources]
logger-util = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
