[project]
name = "instruction-core"
version = "0.0.1"
description = "ADHD Framework core: instruction_core"
requires-python = ">=3.11"
dependencies = [
    "exceptions-core",
    "modules-controller-core",
    "logger-util",
    "config-manager",
    "flow-core",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/instruction_core.git"

[tool.adhd]
layer = "dev"

[tool.uv.sources]
exceptions-core = { workspace = true }
modules-controller-core = { workspace = true }
logger-util = { workspace = true }
config-manager = { workspace = true }
flow-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
