[project]
name = "module-lifecycle-core"
version = "0.1.0"
description = "Module lifecycle management for ADHD Framework - add, remove, and update modules"
requires-python = ">=3.11"
dependencies = [
    "exceptions-core",
    "logger-util",
    "modules-controller-core",
    "creator-common-core",
]

[tool.adhd]
layer = "dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
