[project]
name = "cli-manager"
version = "0.0.1"
description = "ADHD Framework manager: cli_manager"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
    "config-manager",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/adhd_framework_v3/tree/main/modules/foundation/cli_manager"

[tool.adhd]
layer = "foundation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
