[project]
name = "config-manager"
version = "0.0.2"
description = "ADHD Framework manager: config_manager"
requires-python = ">=3.11"
dependencies = [
    "logger-util",
    "modules-controller-core",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/config-manager.git"

[tool.adhd]
layer = "runtime"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
