[project]
name = "logger-util"
version = "0.0.1"
description = "ADHD Framework util: logger_util"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/Logger-Util.git"

[tool.adhd]
layer = "foundation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
