[project]
name = "temp-files-manager"
version = "0.0.1"
description = "ADHD Framework manager: temp_files_manager"
requires-python = ">=3.11"
dependencies = [
    "config-manager",
    "logger-util",
]

[project.urls]
Repository = "https://github.com/AI-Driven-Highspeed-Development/temp_files_manager.git"

[tool.adhd]
layer = "dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
dev-mode-dirs = [".."]
